libdiscover/backends/PackageKitBackend/PackageKitResource.cpp
@@ -148,7 +148,7 @@ QJsonArray PackageKitResource::licenses()
         return {AppStreamUtils::license(id)};
     }
 
-    return {QJsonObject{{QStringLiteral("name"), {}}}};
+    return {};
 }
 
 QList<PackageState> PackageKitResource::addonsInformation()
